[package]
name = "fallible_collections"
version = "0.1.1"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/vcombey/fallible_collections.git"
description = "a crate wich add fallible allocation api to std collections"
readme = "README.md"
keywords = ["fallible", "collections"]