[package]
name = "fallible_collections"
version = "0.4.9"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/vcombey/fallible_collections.git"
description = "a crate which adds fallible allocation api to std collections"
readme = "README.md"
keywords = ["fallible", "collections"]

[dependencies]
hashbrown = { version = "0.13", optional = true }

[features]
default = ["hashmap"]
# Enable on nightly builds to allow use of unstable features
unstable = []
# Functionality based on std::io types
std_io = ["std"]
# Allow use of std
std = []
# Allow use of hashmap
hashmap = ["hashbrown"]
# Use fallible functions added in Rust 1.57
rust_1_57 = []
