[package]
name = "fallible_collections"
version = "0.5.0"
authors = ["vcombey <vcombey@student.42.fr>"]
edition = "2018"
license = "MIT/Apache-2.0"

repository = "https://github.com/vcombey/fallible_collections.git"
description = "a crate which adds fallible allocation api to std collections"
readme = "README.md"
keywords = ["fallible", "collections"]
rust-version = "1.64"

[dependencies]
hashbrown = { version = "0.13", optional = true }

[features]
default = ["hashmap"]
# Enable on nightly builds to allow use of unstable features
unstable = []
# Functionality based on std::io types
std_io = ["std"]
# Allow use of std
std = []
# Allow use of hashmap
hashmap = ["hashbrown"]

# Obsolete. Always enabled.
rust_1_57 = []
